# term-mark

./: .gitignore  .gitmodules  LICENSE  README.md  cmd_parse.py  database.py  directory_walk.py  fuzzy_search.py  interactive_menu.py  main.py  menus.py  pyproject.toml  requirements.txt  sample.txt  schemas.py  setup.py  tm_functions.py  tm_run.zsh
term_mark/: __main__.py  cmd_parse.py  constants.py  database.py  directory_walk.py  main.py  menus.py  tm.zsh  tm_functions.py
